styles.css
*{
  margin:0;
  background: #001f5c;
  font-family: "Times New Roman", Times, serif;
  color: yellow
}
body{
  margin-left : 3vw;
  margin-top : 5vw;
  display: flex;
  flex-direction: column;
  color: white;
}

.btn {
  background: #3498db;
  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
  background-image: -o-linear-gradient(top, #3498db, #2980b9);
  background-image: linear-gradient(to bottom, #3498db, #2980b9);
  -webkit-border-radius: 28;
  -moz-border-radius: 28;
  border-radius: 28px;
  font-family: Arial;
  color: #ffffff;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
  width: 20%;
  margin-top: 5vh;
}

.btn:hover {
  background: #3cb0fd;
  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
  text-decoration: none;
}

textarea {
  width: 90%;
  height: 20%;
  border-color : white;
}

#output {
  border: 1px solid papayawhip;
  width: 90%;
  height: 20vh;
  margin-top: 5vh;
}

